force-app/main/default/objects/QCC_EmergencyExpense__mdt/QCC_EmergencyExpense__mdt.object-meta.xml
<CustomObject>
    <description>QCC: To Update Recommended Emergency Expense, Based on the Cabin and Tier</description>
    <label>QCC_EmergencyExpense</label>
    <pluralLabel>QCC_EmergencyExpenses</pluralLabel>
</CustomObject>