force-app/main/default/objects/QCC_EmergencyExpense__mdt/fields/Bag_Will_Arrive_Greater_Than_24HRS_of_Ar__c.field-meta.xml
<CustomField>
    <fullName>Bag_Will_Arrive_Greater_Than_24HRS_of_Ar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QCC:  Value from Bag Will Arrive Greater Than 24HRS of Arrival Case</description>
    <label>Bag Will Arrive Greater Than 24HRS of Ar</label>
    <type>Checkbox</type>
</CustomField>