force-app/main/default/objects/QCC_EmergencyExpense__mdt/fields/Cabin_Tier__c.field-meta.xml
<CustomField>
    <fullName>Cabin_Tier__c</fullName>
    <description>QCC: Cabin and Tier Values from Case</description>
    <label>Cabin Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First</fullName>
                <default>true</default>
                <label>First</label>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Chairman&apos;s Lounge</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Premium Economy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>