force-app/main/default/objects/QCC_EmergencyExpense__mdt/fields/Customer_Not_In_Home_Port__c.field-meta.xml
<CustomField>
    <fullName>Customer_Not_In_Home_Port__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRM-5883: This checkbox is to see whether the customer is not in their home port.</description>
    <label>Customer Not In Home Port</label>
    <type>Checkbox</type>
</CustomField>