force-app/main/default/objects/QCC_EmergencyExpense__mdt/fields/Emergency_Expense_24_DomInt__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Expense_24_DomInt__c</fullName>
    <description>QCC: First 24 hr Recommended Value Domestic/ International</description>
    <label>Emergency Expense 24 Dom/Int</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>