force-app/main/default/objects/QCC_EmergencyExpense__mdt/fields/Emergency_Expense_grt48_International__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Expense_grt48_International__c</fullName>
    <description>QCC: Recommended Emergency Expense &gt; 48 hrs for International traveller</description>
    <label>Emergency Expense &gt;48 International</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>