force-app/main/default/objects/QCC_EmergencyExpense__mdt/fields/Stage_2_Reimbursed__c.field-meta.xml
<CustomField>
    <fullName>Stage_2_Reimbursed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QCC: Copy of Case Stage 2 Reimbursed</description>
    <label>Stage 2 Reimbursed</label>
    <type>Checkbox</type>
</CustomField>